@@ -79,8 +79,9 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2005-2016 Michal Špaček
- BSD 2-Clause License
+© 2005-2016 Michal Špaček
+
+BSD 2-Clause License
 
 =head1 VERSION
 
