@@ -78,8 +78,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2005-2016 Michal Špaček
-     BSD 2-Clause License
+    © 2005-2016 Michal Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.06
