@@ -2,6 +2,7 @@
  [Common]
  - Fix Makefile.PL fails with no '.' in @INC.
  - Rewrite tag to better element (in XML terminology) in tests and data.
+ - Update LICENSE AND COPYRIGHT sections in doc.
  - Update Module::Install to 1.19 version.
 
 0.05 2016-02-20T23:27:55+01:00
